# edix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blur.cu
src/: dbutils.cpp  dbutils.cu  dbutils.h  dbutils.hpp  grayscale.cpp  grayscale.hpp  homepage.cpp  homepage.cu  homepage.h  homepage.hpp  jpgDecoder.cpp  main.cpp  main.cu  main.h  main.hpp  pngDecoder.cpp  project.cpp  project.cu  project.h  project.hpp  rdutils.cpp  rdutils.hpp  settings.cpp  settings.cu  settings.h  settings.hpp  temp.h  uitils.cpp  utils.h  utils.hpp
src/dbutils/: newpgutils.cpp  newpgutils.hpp  pgutils.cpp  pgutils.hpp  rdutils.cpp  rdutils.hpp
src/env/: homepage.cpp  homepage.hpp  project.cpp  project.hpp  settings.cpp  settings.hpp
src/functions/: blur.cu  blur.cuh  colorfilter.cu  colorfilter.cuh  composition.cu  composition.cuh  compression.cu  compression.cuh  downscale.cu  downscale.cuh  functions.cuh  functions.hu  grayscale.cu  grayscale.cuh  grayscale.hu  imgutils.cpp  imgutils.hpp  overlap.cu  overlap.cuh  parser.cpp  parser.hpp  scale.cu  scale.cuh  upscale.cu  upscale.cuh
test/: datiCompressione.md  datiCompressione.txt  main.cpp  main.hpp  testFunc.cpp  testFunc.cu  testFunc.cuh  testFunc.hpp
test/images/: 4emp.ppm  gray.ppm  immagine.ppm
test/performace/: blurCudaShared.txt  compositionCuda.txt  downscaleBicubicCuda.txt  performance.txt  upscaleBicubicCuda.txt  upscaleBicubicCudaShared.txt  upscaleBilinearCuda.txt
test/performance/: performance.txt
test/performanceNVPROFILER/: blurCuda.txt  colorfilterCuda.txt  downscaleBilinearCuda.txt  grayscaleCuda.txt  overlapCuda.txt  upscaleBilinearCudaShared.txt
